fixed things and made prettier

--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
 		<meta name="author" content="mflouze">
 		<meta name="description" content="dialogue console interface to stimulate introspection">
 		<meta name="keywords" content="console terminal introspection exe simulation dialogue">
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="images/fav.png" type="image/x-icon">
+		<link rel="icon" href="images/fav.png" type="image/x-icon">
 		<link rel="stylesheet" href="styles/body.css" type="text/css">
 		<!-- <script src="data/history.json" type="text/javascript"></script> -->
 	</head>
 	<body onload="load()">
 		<header>
-			<h1 class="title text">exe.html</h1>
+			<h1 class="title text"><u>exe</u>.html</h1>
 		</header>
 		<div class="console">
-			<section id="history" class="history text">
+			<section class="history-wrap">
+				<section id="history" class="history text">
 
+				</section>
 			</section>
+			
 			<!-- <section class="tarot"> 
 				<img src="images/thestar_animated.gif"/>
 			</section> -->
