added delayed response func + cleaned interface

--- a/index.html
+++ b/index.html
@@ -10,33 +10,22 @@
 		<link rel="icon" href="images/fav.png" type="image/x-icon">
 		<link rel="stylesheet" href="styles/body.css" type="text/css">
 		<!-- <script src="data/history.json" type="text/javascript"></script> -->
+		<script src="scripts/script.js" type="text/javascript"></script>
 	</head>
 	<body onload="load()">
 		<header>
-			<h1 class="title text"><u>exe</u>.html</h1>
+			<h1 class="title text">
+				<= <u>exe</u>.html >=</h1>
 		</header>
 		<div class="console">
 			<section class="history-wrap">
 				<section id="history" class="history text">
-
 				</section>
 			</section>
-			
-			<!-- <section class="tarot"> 
-				<img src="images/thestar_animated.gif"/>
-			</section> -->
 			<section class="prompt-wrap">
-				<!--
-				ajouter une fonction javascript qui empeche le retour a la ligne
-				quand on appuie sur ENTER
-				l'action doit enregistrer le texte dans l'historique des queries
-				puis effacer la console
-				-->
 				<textarea id="prompt" autofocus rows=1 wrap="hard">
-	
 				</textarea>
 			</section>
 		</div>
-		<script src="scripts/script.js" type="text/javascript"></script> 
 	</body>
 </html>
