added commands section

--- a/index.html
+++ b/index.html
@@ -17,14 +17,24 @@
 			<h1 class="title text">
 				<= <u>exe</u>.html >=</h1>
 		</header>
+		<section class="commands">
+			<h2>Commands</h2>
+			<ul>
+				<li>w</li>
+				<li>cv</li>
+				<li>about</li>
+				<li>help</li>
+				<li>t</li>
+				<li>p</li>
+			</ul>
+		</section>
 		<div class="console">
 			<section class="history-wrap">
 				<section id="history" class="history text">
 				</section>
 			</section>
 			<section class="prompt-wrap">
-				<textarea id="prompt" autofocus rows=1 wrap="hard">
-				</textarea>
+				<input id="prompt" autofocus type="text" name="prompt">
 			</section>
 		</div>
 	</body>
